CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(DNgenpass)
AUX_SOURCE_DIRECTORY( . SOURCES )

FIND_PACKAGE(openssl REQUIRED)

# Build of the program
ADD_EXECUTABLE( main ${SOURCES} )
TARGET_LINK_LIBRARIES(main crypto)

# Installation of the program
INSTALL(TARGETS main
        DESTINATION "bin"
        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

